--- a/src/Components/Weather/Weather.scss
+++ b/src/Components/Weather/Weather.scss
@@ -6,7 +6,7 @@
   padding: 1rem;
   z-index: 6;
   color: white;
-  bottom: 125svh;
+  top: 80svh;
 }
 .WeatherWrapper {
   position: relative;
